--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 <script type="text/javascript">
   var DATA_SERVICE_URL = "https://script.google.com/macros/s/AKfycbx75GBiRRl9qUyNMCH-BtDbOc4-g0WZSgCnqhvi6YvhCxYpJ1kJ/exec?jsonp=callback";
   var map;
-  var icon;
-  var techCommItems = [];
+  var conferences;
+  var societies;
+  var otherItems;
   var infoWindow = new google.maps.InfoWindow();
   var userZoom = 2;
 
@@ -100,6 +101,50 @@
     map = new google.maps.Map(document.getElementById("map-canvas"), {
       center: {lat: 10.367178, lng: 16.998713},
       zoom: 2
+    });
+
+    // Make three data layers.
+    conferences = new google.maps.Data({
+      style: {
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          fillColor: '#c077f1',
+          fillOpacity: 1,
+          strokeColor: '#a347e1',
+          strokeWeight: 3,
+          scale: 10
+        }
+      },
+      map: map
+    });
+    console.log('conferences.getMap() => ' + conferences.getMap());
+
+    societies = new google.maps.Data({
+      style: {
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          fillColor: '#f6bb2e',
+          fillOpacity: 1,
+          strokeColor: '#ee7b0c',
+          strokeWeight: 3,
+          scale: 10
+        }
+      },
+      map: map
+    });
+
+    otherItems = new google.maps.Data({
+      style: {
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          fillColor: '#017cff',
+          fillOpacity: 1,
+          strokeColor: '#0000ff',
+          strokeWeight: 3,
+          scale: 10
+        }
+      },
+      map: map
     });
 
     // Insert a script element into the document header, to get
@@ -150,157 +195,98 @@
       searchMarker.setPosition(place.geometry.location);
       searchMarker.setVisible(true);
     });
-  }
 
+    // Show an info window when the user clicks the marker.
+    conferences.addListener('click', showInfoWindow);
+    societies.addListener('click', showInfoWindow);
+    otherItems.addListener('click', showInfoWindow);
+  }
+  
   // Get the data from the tech comm spreadsheet.
   function callback(data) {
     // Get the spreadsheet rows one by one.
     // First row contains headings, so start the index at 1 not 0.
     for (var i = 1; i < data.length; i++) {
-      addTechCommItem({
-        type: data[i][0],
-        name: data[i][1],
-        description: data[i][2],
-        website: data[i][3],
-        startdate: data[i][4],
-        enddate: data[i][5],
-        address: data[i][6],
-        location: new google.maps.LatLng(data[i][7], data[i][8]),
-        marker: null
+      var type = data[i][0];
+      var container =
+          type == 'Conference' ? conferences :
+          type == 'Society' ? societies :
+          otherItems;
+
+      container.add({
+        geometry: {lat: data[i][7], lng: data[i][8]},
+        properties: {
+          type: type,
+          name: data[i][1],
+          description: data[i][2],
+          website: data[i][3],
+          startdate: data[i][4],
+          enddate: data[i][5],
+          address: data[i][6]
+        }
       });
     }
   }
 
-  // Set up markers for tech com items
-  function addTechCommItem(itemInfo) {
-    //Style a marker based on type of tech comm item.
-    switch (itemInfo.type) {
-      case 'Conference':
-        icon = {
-          path: google.maps.SymbolPath.CIRCLE,
-          fillColor: '#c077f1',
-          fillOpacity: 1,
-          strokeColor: '#a347e1',
-          strokeWeight: 3,
-          scale: 10
-        };
-        break;
-      case 'Society':
-        icon = {
-          path: google.maps.SymbolPath.CIRCLE,
-          fillColor: '#f6bb2e',
-          fillOpacity: 1,
-          strokeColor: '#ee7b0c',
-          strokeWeight: 3,
-          scale: 10
-        };
-        break;
-      default:
-        icon = {
-          path: google.maps.SymbolPath.CIRCLE,
-          fillColor: '#017cff',
-          fillOpacity: 1,
-          strokeColor: '#0000ff',
-          strokeWeight: 3,
-          scale: 10
-        };
-    }
-
-    // Create a marker.
-    var marker = new google.maps.Marker({
-      position: itemInfo.location,
-      icon: icon,
-      map: map
-    });
-
-    // Show an info window when the user clicks the marker.
-    marker.addListener('click', showInfoWindow);
-
-    // Add the item to the array of items.
-    itemInfo.marker = marker;
-    techCommItems.push(itemInfo);
-  }
-
   // Show the tech comm info in a popup window.
-  function showInfoWindow() {
-    var marker = this;
-    infoWindow.setPosition(marker.getPosition());
-    infoWindow.setContent('No information found');
-    for (var i = 0; i < techCommItems.length; i++) {
-      if (techCommItems[i].marker == marker) {
-        var content = '<div id="infowindow" class="infowindow">' +
-            '<h2>' + techCommItems[i].name + '</h2>' +
-            '<p><em>' + techCommItems[i].type + '</em>';
-        if (techCommItems[i].website != '') {
-          content = content + '  (' + techCommItems[i].website + ')';
-        }
-        content = content + '</p>' +
-          '<p>' + techCommItems[i].description + '</p>';
-        if (techCommItems[i].startdate != '') {
-          content = content + '<p>' + techCommItems[i].startdate;
-        }
-        if (techCommItems[i].enddate != '') {
-          content = content + ' - ' + techCommItems[i].enddate;
-        }
+  function showInfoWindow(eventArgs) {
+    var feature = eventArgs.feature;
+    infoWindow.setPosition(feature.getGeometry().get());
 
-        content = content + '</p>' + '<p>' + techCommItems[i].address +
-          '</p>' + '</div>';
-
-        infoWindow.setContent(content);
-      }
+    var content = '<div id="infowindow" class="infowindow">' +
+        '<h2>' + feature.getProperty('name') + '</h2>' +
+        '<p><em>' + feature.getProperty('type') + '</em>';
+    if (feature.getProperty('website') != '') {
+      content = content + '  (' + feature.getProperty('website') + ')';
     }
+    content = content + '</p>' +
+      '<p>' + feature.getProperty('description') + '</p>';
+    if (feature.getProperty('startdate') != '') {
+      content = content + '<p>' + feature.getProperty('startdate');
+    }
+    if (feature.getProperty('enddate') != '') {
+      content = content + ' - ' + feature.getProperty('enddate');
+    }
+
+    content = content + '</p>' + '<p>' + feature.getProperty('address') +
+      '</p>' + '</div>';
+
+    infoWindow.setContent(content);
     // Zoom in before opening the info window.
     userZoom = map.getZoom();
     if (userZoom < 14) {
       map.setZoom(14);
-      map.setCenter(marker.getPosition());
+      map.setCenter(feature.getGeometry().get());
     }
     // Open the info window.
-    infoWindow.open(map, marker);
+    infoWindow.open(map);
   }
 
   // Respond to change in conference selector.
   function hideShowConferences(checkBox) {
     if (checkBox.checked) {
-      showTechCommItems('Conference');
+      conferences.setMap(map);
     } else {
-      hideTechCommItems('Conference');
+      conferences.setMap(null);
     }
   }
 
   // Respond to change in society selector.
   function hideShowSocieties(checkBox) {
     if (checkBox.checked) {
-      showTechCommItems('Society');
+      societies.setMap(map);
     } else {
-      hideTechCommItems('Society');
+      societies.setMap(null);
     }
   }
 
   // Respond to change in type 'other' selector.
   function hideShowOther(checkBox) {
+    console.log('hideShowOther(' + checkBox.checked + ')');
     if (checkBox.checked) {
-      showTechCommItems('Other');
+      otherItems.setMap(map);
     } else {
-      hideTechCommItems('Other');
-    }
-  }
-
-  // Show the markers for the item type selected by the user.
-  function showTechCommItems(itemType) {
-    for (var i = 0; i < techCommItems.length; i++) {
-      if (techCommItems[i].type == itemType) {
-        techCommItems[i].marker.setMap(map);
-      }
-    }
-  }
-
-  // Hide the markers for the item type deselected by the user.
-  function hideTechCommItems(itemType) {
-    for (var i = 0; i < techCommItems.length; i++) {
-      if (techCommItems[i].type == itemType) {
-        techCommItems[i].marker.setMap(null);
-      }
+      otherItems.setMap(null);
     }
   }
 
