--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     height: 32px;
-    width: 220px;
+    width: 230px;
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     font-family: Roboto;
@@ -38,11 +38,11 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     height: 96px;
-    width: 220px;
+    width: 230px;
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    color: #fff;
-    background-color: #4d90fe;
+    color: #000;
+    background-color: #fff;
     padding: 5px 11px 0px 11px;
   }
 
@@ -50,6 +50,22 @@
     font-family: Roboto;
     font-size: 13px;
     font-weight: 300;
+  }
+
+  #selecttype-conference {
+    outline: 2px solid #c077f1
+  }
+
+  #selecttype-society {
+    outline: 2px solid #f6bb2e
+  }
+
+  #selecttype-business {
+    outline: 2px solid #1ab61a
+  }
+
+  #selecttype-other {
+    outline: 2px solid #017cff
   }
 
   #place-search {
