Removed the sensor parameter as it's no longer required for the JavaScript API.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <!-- Load the Google Maps JavaScript API -->
 <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&sensor=false&libraries=places">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places">
 </script>
 
 <!-- Set up the map and UI controls -->
