--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@
   var DATA_SERVICE_URL = "https://script.google.com/macros/s/AKfycbx75GBiRRl9qUyNMCH-BtDbOc4-g0WZSgCnqhvi6YvhCxYpJ1kJ/exec?jsonp=callback";
   var DEFAULT_ZOOM = 2;
   var AUTO_ZOOM = 14;
+  var userZoom = DEFAULT_ZOOM;
   var map;
   var checkboxes = {};
   var infoWindow = new google.maps.InfoWindow({
     pixelOffset: new google.maps.Size(0, -10)
   });
-  var userZoom = DEFAULT_ZOOM;
   var markerClicked = false;
+  var previousName;
 
   // This function is called after the page has loaded, to set up the map
   function initializeMap() {
@@ -301,7 +302,12 @@
     map.data.addListener('mouseover', handleHover);
 
     // Close the info window when the mouse leaves an item.
-    map.data.addListener('mouseout', closeInfoWindow);
+    map.data.addListener('mouseout', handleMouseOut);
+
+    // Reset the click flag when the user closes the info window.
+    google.maps.event.addListener(infoWindow, 'closeclick', function() {
+      markerClicked = false;
+    });
   }
 
   // Create a popup window containing the tech comm info.
@@ -340,32 +346,41 @@
 
   // On click of marker, show the popup window and zoom in.
   function handleClick(event) {
-    if (markerClicked) {
+    // Check whether the marker has been clicked already,
+    // because we want to zoom out on second click of same marker.
+    var currentName = event.feature.getProperty('name');
+    if (currentName == previousName) {
       // This is the second click, so zoom back to user's previous zoom level.
       map.setZoom(userZoom);
+      // Reset flags ready for next time round.
+      previousName = '';
       markerClicked = false;
     }
     else {
+      previousName = event.feature.getProperty('name'); 
       // This is the first click, so show the popup window and zoom in.
       createInfoWindow(event.feature);
   
       // Zoom in before opening the info window.
       // If the user has already zoomed in beyond our automatic zoom,
       // leave their zoom setting untouched.
-      userZoom = map.getZoom();
-      if (userZoom < AUTO_ZOOM) {
+      if (map.getZoom() > AUTO_ZOOM) {
+        userZoom = map.getZoom();
+      }
+      else {
         map.setZoom(AUTO_ZOOM);
         map.setCenter(event.feature.getGeometry().get());
+        userZoom = DEFAULT_ZOOM;
       }
   
-      // Open the info window.
+      // Open the info window and reset flag ready for next time round.
       infoWindow.open(map);
       markerClicked = true;
     }
   }
 
   // Close the popup window, if it was opened on hover.
-  function closeInfoWindow() {
+  function handleMouseOut() {
     if (!markerClicked) {
       infoWindow.close();
     }
