Changed CSS link type to fix Firefox and IE.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Tech Comm on a Map</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-<link href="resources/techcomm-map-styles.css" rel="stylesheet" type="css" />
+<link href="resources/techcomm-map-styles.css" rel="stylesheet" type="text/css" />
 
 <!-- Load the Google Maps JavaScript API -->
 <script type="text/javascript"
