Added Google Analytics tracking code.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 <link href="resources/techcomm-map-styles.css" rel="stylesheet" type="text/css" />
 
+<!-- Include the Google Analytics JavaScript -->
+<script type="text/javascript" src="resources/techcomm-map-ga.js"></script>
+
 <!-- Load the Google Maps JavaScript API -->
 <script type="text/javascript"
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places">
