Use jQuery.ajax

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places">
 </script>
 
+<!-- Load JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 <!-- Set up the map and UI controls -->
 <script src="resources/techcomm-map.js"></script>
 </head>
