Fix en dash, and some comments.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places">
 </script>
 
-<!-- Load JQuery -->
+<!-- Load jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- Set up the map and UI controls -->
-<script src="resources/techcomm-map.js"></script>
+<script src="resources/techcomm-map.js" charset="utf-8"></script>
 </head>
 
 <body>
