--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
 
   <!-- Data type selectors -->
   <div id="type-selector">
-    <input type="checkbox" name="type" id="selecttype-conference"
-      checked="checked" onclick="handleCheckBoxClick(this, 'Conference')">
-    <label for="selecttype-conference">Conferences</label>
+    <input type="checkbox" name="type" id="selecttype-conference14"
+      checked="checked" onclick="handleCheckBoxClick(this, 'Conference 2014')">
+    <label for="selecttype-conference14">Conferences 2014</label>
+    <br>
+    <input type="checkbox" name="type" id="selecttype-conference15"
+      checked="checked" onclick="handleCheckBoxClick(this, 'Conference 2015')">
+    <label for="selecttype-conference15">Conferences 2015</label>
     <br>
     <input type="checkbox" name="type" id="selecttype-society"
       checked="checked" onclick="handleCheckBoxClick(this, 'Society')">
