Added type for educational courses

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       checked="checked" onclick="handleCheckBoxClick(this, 'Business')">
     <label for="selecttype-business">Businesses</label>
     <br>
+    <input type="checkbox" name="type" id="selecttype-course"
+      checked="checked" onclick="handleCheckBoxClick(this, 'Course')">
+    <label for="selecttype-course">Courses</label>
+    <br>
     <input type="checkbox" name="type" id="selecttype-other"
       checked="checked" onclick="handleCheckBoxClick(this, 'Other')">
     <label for="selecttype-other">Other</label>
