Loads the map asynchronously.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
 <!-- Include the Google Analytics JavaScript -->
 <script type="text/javascript" src="resources/techcomm-map-ga.js"></script>
 
-<!-- Load the Google Maps JavaScript API -->
-<script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places">
-</script>
-
 <!-- Load jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<!-- Set up the map and UI controls -->
-<script src="resources/techcomm-map.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -65,5 +58,12 @@
 
   <!-- Map -->
   <div id="map-canvas"></div>
+
+  <!-- Set up the map and UI controls -->
+  <script src="resources/techcomm-map.js" charset="utf-8"></script>
+
+  <!-- Load the Google Maps JavaScript API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWekcCNrI7bXKrGY4kOUWQjQGImf2lzc&libraries=places&callback=initializeMap"
+    async defer></script>
 </body>
 </html>
