Added an Add option to the UI, using icons instead of text.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,15 @@
   </div>
 
   <div id = "branding">
-     <span>Tech Comm on a Map
-       (<a href="http://ffeathers.wordpress.com/tech-comm-on-a-map/">about</a>)
+    <span>Tech Comm on a Map
+      <a href="http://ffeathers.wordpress.com/tech-comm-on-a-map/"><img
+          src="resources/icons/ic_info.png"
+          width=10%
+          alt="info"></a>
+      <a href="https://docs.google.com/forms/d/1uIEpAu0vpiDwNqwQcr-912TD1_nG_PND9J3NDCPvEXI/viewform?usp=send_form"><img
+          src="resources/icons/ic_add.png"
+          width=10%
+          alt="add"></a>
      </span>
   </div>
 
