Added tooltips for the icons.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
       <a href="http://ffeathers.wordpress.com/tech-comm-on-a-map/"><img
           src="resources/icons/ic_info.png"
           width=10%
-          alt="info"></a>
+          alt="info"
+          title="About this app"></a>
       <a href="https://docs.google.com/forms/d/1uIEpAu0vpiDwNqwQcr-912TD1_nG_PND9J3NDCPvEXI/viewform?usp=send_form"><img
           src="resources/icons/ic_add.png"
           width=10%
-          alt="add"></a>
+          alt="add"
+          title="Add an item to the map"></a>
      </span>
   </div>
 
